api fixes and ui updates
