# MyRecordsClient/src/app/domain/user.model.ts
@@ -1,2 +1,7 @@
 export interface User {
+  email:string;
+  password:string;
+  username:string;
+  firstname:string;
+  lastname:string;
 }
